# CLI-Rust-Weather-App

./: Cargo.toml  README.md
src/: main.rs
